--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
   "info": {
-    "name": "日常",
-    "url": "",
+    "name": "Daily",
     "version": "1.0.0",
+    "types": 3,
+    "url": "https://raw.githubusercontent.com/Josscii/Daily/master/.output/daily.box",
     "author": "Josscii",
-    "website": "https://github.com/Josscii/Daily",
-    "types": 0
+    "website": "https://github.com/Josscii/Daily"
   },
   "settings": {
     "minSDKVer": "1.0.0",
